
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int sin_port; } ;
struct sockaddr {int dummy; } ;
typedef int on ;
typedef int iface ;


 int AF_INET ;
 int SOCK_DGRAM ;
 int SOL_SOCKET ;
 int SO_BROADCAST ;
 int close (int) ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 int getsockname (int,struct sockaddr*,int*) ;
 int htons (int) ;
 struct sockaddr_in local ;
 int memcpy (struct sockaddr_in*,struct sockaddr_in*,int) ;
 int memset (struct sockaddr_in*,int ,int) ;
 int printf (char*) ;
 struct sockaddr_in saddr ;
 int setsockopt (int,int ,int ,int*,int) ;
 int socket (int ,int ,int ) ;

void get_interface(void) {
 int sockr, len, on = 1;
 struct sockaddr_in dest;
 struct sockaddr_in iface;

 memset(&iface, 0, sizeof(iface));
 memcpy(&dest, &saddr, sizeof(struct sockaddr_in));
 dest.sin_port = htons(11111);

 sockr = socket(AF_INET, SOCK_DGRAM, 0);

 if(setsockopt(sockr, SOL_SOCKET, SO_BROADCAST, &on, sizeof(on)) == -1) {
  printf("getsockopt error\n");
  exit(1);
 }

 if(connect(sockr, (struct sockaddr *)&dest,
    sizeof(struct sockaddr_in)) == -1) {
  printf("connect error\n");
  exit(1);
 }

 len = sizeof(iface);
 if(getsockname(sockr, (struct sockaddr *)&iface, &len) == -1) {
  printf("getsockname error\n");
  exit(1);
 }

 close(sockr);
 memcpy(&local, &iface, sizeof(struct sockaddr_in));
 return;
}
