; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_22294.c_get_interface.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_22294.c_get_interface.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_in = type { i32 }
%struct.sockaddr = type { i32 }

@saddr = common dso_local global %struct.sockaddr_in zeroinitializer, align 4
@AF_INET = common dso_local global i32 0, align 4
@SOCK_DGRAM = common dso_local global i32 0, align 4
@SOL_SOCKET = common dso_local global i32 0, align 4
@SO_BROADCAST = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"getsockopt error\0A\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"connect error\0A\00", align 1
@.str.2 = private unnamed_addr constant [19 x i8] c"getsockname error\0A\00", align 1
@local = common dso_local global %struct.sockaddr_in zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @get_interface() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.sockaddr_in, align 4
  %5 = alloca %struct.sockaddr_in, align 4
  store i32 1, i32* %3, align 4
  %6 = call i32 @memset(%struct.sockaddr_in* %5, i32 0, i32 4)
  %7 = call i32 @memcpy(%struct.sockaddr_in* %4, %struct.sockaddr_in* @saddr, i32 4)
  %8 = call i32 @htons(i32 11111)
  %9 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %4, i32 0, i32 0
  store i32 %8, i32* %9, align 4
  %10 = load i32, i32* @AF_INET, align 4
  %11 = load i32, i32* @SOCK_DGRAM, align 4
  %12 = call i32 @socket(i32 %10, i32 %11, i32 0)
  store i32 %12, i32* %1, align 4
  %13 = load i32, i32* %1, align 4
  %14 = load i32, i32* @SOL_SOCKET, align 4
  %15 = load i32, i32* @SO_BROADCAST, align 4
  %16 = call i32 @setsockopt(i32 %13, i32 %14, i32 %15, i32* %3, i32 4)
  %17 = icmp eq i32 %16, -1
  br i1 %17, label %18, label %21

18:                                               ; preds = %0
  %19 = call i32 @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %20 = call i32 @exit(i32 1) #3
  unreachable

21:                                               ; preds = %0
  %22 = load i32, i32* %1, align 4
  %23 = bitcast %struct.sockaddr_in* %4 to %struct.sockaddr*
  %24 = call i32 @connect(i32 %22, %struct.sockaddr* %23, i32 4)
  %25 = icmp eq i32 %24, -1
  br i1 %25, label %26, label %29

26:                                               ; preds = %21
  %27 = call i32 @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  %28 = call i32 @exit(i32 1) #3
  unreachable

29:                                               ; preds = %21
  store i32 4, i32* %2, align 4
  %30 = load i32, i32* %1, align 4
  %31 = bitcast %struct.sockaddr_in* %5 to %struct.sockaddr*
  %32 = call i32 @getsockname(i32 %30, %struct.sockaddr* %31, i32* %2)
  %33 = icmp eq i32 %32, -1
  br i1 %33, label %34, label %37

34:                                               ; preds = %29
  %35 = call i32 @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0))
  %36 = call i32 @exit(i32 1) #3
  unreachable

37:                                               ; preds = %29
  %38 = load i32, i32* %1, align 4
  %39 = call i32 @close(i32 %38)
  %40 = call i32 @memcpy(%struct.sockaddr_in* @local, %struct.sockaddr_in* %5, i32 4)
  ret void
}

declare dso_local i32 @memset(%struct.sockaddr_in*, i32, i32) #1

declare dso_local i32 @memcpy(%struct.sockaddr_in*, %struct.sockaddr_in*, i32) #1

declare dso_local i32 @htons(i32) #1

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i32 @setsockopt(i32, i32, i32, i32*, i32) #1

declare dso_local i32 @printf(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @connect(i32, %struct.sockaddr*, i32) #1

declare dso_local i32 @getsockname(i32, %struct.sockaddr*, i32*) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
